--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "eslint": "eslint src",
+    "eslint:fix": "eslint src --fix",
+    "fix": "run-s eslint:fix stylefmt",
+    "lint": "run-s eslint stylelint",
+    "stylefmt": "stylefmt -r src/main.css -c .stylelintrc",
+    "stylelint": "stylelint src/main.css"
   },
   "repository": {
     "type": "git",
@@ -14,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^4.15.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
@@ -24,6 +31,20 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-plugin-dependencies": "^2.4.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "npm-run-all": "^4.1.2",
+    "style-loader": "^0.19.0",
+    "stylefmt": "^6.0.0",
+    "stylefmt-loader": "^1.2.3",
+    "stylelint": "^8.3.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-order": "^0.7.0",
+    "stylelint-webpack-plugin": "^0.9.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
